{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 19,
  "lineage": "9cb431e8-6afd-0e16-a6b2-6909a290d316",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hari",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:877477519598:internet-gateway/igw-0d9321c4baa8cb9e7",
            "id": "igw-0d9321c4baa8cb9e7",
            "owner_id": "877477519598",
            "tags": {
              "Name": "terraform-eks-hari"
            },
            "vpc_id": "vpc-0f4ed6f512c87c79a"
          },
          "depends_on": [
            "aws_vpc.hari"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hari",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:877477519598:route-table/rtb-0f777996a938f3251",
            "id": "rtb-0f777996a938f3251",
            "owner_id": "877477519598",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d9321c4baa8cb9e7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0f4ed6f512c87c79a"
          },
          "depends_on": [
            "aws_internet_gateway.hari",
            "aws_vpc.hari"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hari",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f642eda86fcf8086",
            "route_table_id": "rtb-0f777996a938f3251",
            "subnet_id": "subnet-0c20ea35fe27b17d5"
          },
          "depends_on": [
            "aws_route_table.hari",
            "aws_subnet.hari"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0deb6021299d975e6",
            "route_table_id": "rtb-0f777996a938f3251",
            "subnet_id": "subnet-06b204c5b4f77223b"
          },
          "depends_on": [
            "aws_route_table.hari",
            "aws_subnet.hari"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hari-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:877477519598:security-group/sg-06553e998de987887",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06553e998de987887",
            "ingress": [],
            "name": "terraform-eks-hari-cluster",
            "name_prefix": "",
            "owner_id": "877477519598",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-hari"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4ed6f512c87c79a"
          },
          "depends_on": [
            "aws_vpc.hari"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "hari-cluster-ingress-workstation-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "18.205.191.218/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2693994860",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06553e998de987887",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.hari-cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hari",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:877477519598:subnet/subnet-0c20ea35fe27b17d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0c20ea35fe27b17d5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "877477519598",
            "tags": {
              "Name": "terraform-eks-hari-node",
              "kubernetes.io/cluster/terraform-eks-hari": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-hari-node",
              "kubernetes.io/cluster/terraform-eks-hari": "shared"
            },
            "vpc_id": "vpc-0f4ed6f512c87c79a"
          },
          "depends_on": [
            "aws_vpc.hari",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:877477519598:subnet/subnet-06b204c5b4f77223b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06b204c5b4f77223b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "877477519598",
            "tags": {
              "Name": "terraform-eks-hari-node",
              "kubernetes.io/cluster/terraform-eks-hari": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-hari-node",
              "kubernetes.io/cluster/terraform-eks-hari": "shared"
            },
            "vpc_id": "vpc-0f4ed6f512c87c79a"
          },
          "depends_on": [
            "aws_vpc.hari",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hari",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:877477519598:vpc/vpc-0f4ed6f512c87c79a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01d687c8f68c908be",
            "default_route_table_id": "rtb-009c4cc5ff1c6cacb",
            "default_security_group_id": "sg-08fe8d9e5bbe3f38a",
            "dhcp_options_id": "dopt-a6d8badc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f4ed6f512c87c79a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-009c4cc5ff1c6cacb",
            "owner_id": "877477519598",
            "tags": {
              "Name": "terraform-eks-hari-node",
              "kubernetes.io/cluster/terraform-eks-hari": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-hari-node",
              "kubernetes.io/cluster/terraform-eks-hari": "shared"
            }
          }
        }
      ]
    }
  ]
}